WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
156520
Web Inspector: Dock controls are not available in toolbar if Web Inspector window leaves fullscreen
https://bugs.webkit.org/show_bug.cgi?id=156520
Summary
Web Inspector: Dock controls are not available in toolbar if Web Inspector wi...
Joseph Pecoraro
Reported
2016-04-12 14:27:33 PDT
* SUMMARY Dock controls are not available in toolbar if Web Inspector window leaves fullscreen * STEPS TO REPRODUCE 1. Launch Safari 2. Visit any webpage 3. Enter Full Screen mode 4. Via the "Develop" menu, enable the Web Inspector 5. Detach the Web Inspecor from browser window 6. When the Web Inspector is presented in Full Screen mode, bring it back to standard mode => Dock controls are missing in toolbar
Attachments
[PATCH] Proposed Fix
(2.10 KB, patch)
2016-04-12 14:30 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2016-04-12 14:27:45 PDT
<
rdar://problem/22101106
>
Joseph Pecoraro
Comment 2
2016-04-12 14:30:00 PDT
Created
attachment 276277
[details]
[PATCH] Proposed Fix
WebKit Commit Bot
Comment 3
2016-04-12 15:48:37 PDT
Comment on
attachment 276277
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 276277 Committed
r199395
: <
http://trac.webkit.org/changeset/199395
>
WebKit Commit Bot
Comment 4
2016-04-12 15:48:41 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug