Web Inspector: Dock controls are not available in toolbar if Web Inspector window leaves fullscreen https://bugs.webkit.org/show_bug.cgi?id=156520 <rdar://problem/22101106>

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2016-04-12
Reviewed by Timothy Hatcher.

* UIProcess/mac/WebInspectorProxyMac.mm:
(WebKit::WebInspectorProxy::platformCanAttach):
Be more explicit about the attachment view check. Its intent
was to prevent allowing a 2nd level inspector from attaching
to a 1st level inspector. We can use a stronger check. Also,
remove deprecated pragmas by switching to new value.

Canonical link: https://commits.webkit.org/174629@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@199395 268f45cc-cd09-0410-ab3c-d52691b4dbfc